# learn-wasm-fbs

./: .clang-format  .gitignore  CMakeLists.txt  TODO.md  library.cpp  library.h
flatbuffers/: GameInput.fbs  GameOutput.fbs  Types.fbs  gen.sh
game/: CMakeLists.txt  Game.cpp  Game.h  GameWinner.cpp  GameWinner.h  Throwing.cpp  Throwing.h  test_main.cpp
game-facade/: CMakeLists.txt  GameFacade.cpp  GameFacade.h  test-game-facade.cpp
scripts/: build-wasm.sh
util/: NonCopyable.h
